--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ datasette-reconcile
 datasette-cluster-map
 sqlite-utils
 csvs-to-sqlite
-pandas==1.5.3
+pandas
 bananompy
 datasette-jellyfish
 tqdm
